--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
             </row>
         </header>
         <content>
+            <div class="test">text</div>
             <div class="slidemenu">
-                <button>any content</button>
+                <div class="menucontent">
+                    <button>any content</button>
+                </div>
             </div>
         </content>
     </body>
