--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     </head>
 
     <body>
+        <div class="background">
+            <div class="triangle-br"></div>
+        </div>
         <header>
             <row>
                 <h1 class="weight-normal shadow-on">水無し水烟</h1>
