--- a/index.html
+++ b/index.html
@@ -31,19 +31,28 @@
 
     <body>
         <div class="background">
-            <div class="triangle-br"></div>
+            <div class="shapes">
+                <div class="shape-quadrangle"></div>
+                <div class="shape-triangle-top-left light"></div>
+                <div class="shape-triangle-bottom-left dark"></div>
+            </div>
         </div>
         <header>
             <row>
-                <h1 class="weight-normal shadow-on">水無し水烟</h1>
+                <h1 class="weight-bold">水無し水烟</h1>
                 <button class="hamburger">三</button>
             </row>
         </header>
         <content>
-            <div class="test">text</div>
             <div class="slidemenu">
                 <div class="menucontent">
-                    <button>any content</button>
+                    <h1>menu</h1>
+                    <div class="buttons">
+                        <button>picture</button>
+                        <button>3d model</button>
+                        <button>social</button>
+                        <button>blog</button>
+                    </div>
                 </div>
             </div>
         </content>
