--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header>
             <row>
                 <h1 class="weight-bold">水無し水烟</h1>
-                <button class="hamburger">三</button>
+                <button class="hamburger onshow"><span></span></button>
             </row>
         </header>
         <content>
