--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja" class="no-js">
-    <head>
+    <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
 
@@ -9,20 +9,24 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="stylesheet" href="./static/style/style.css" type="text/css" />
         <script src="./static/script/index.js" ></script>
-
-        <meta name="description" content="gfool6の個人ページ" />
-        <meta property="og:title" content="水無し水烟" />
-        <meta property="og:description" content="gfool6の個人ページ" />
-        <meta property="og:image" content="" />
-        <meta property="og:image:alt" content="image alt" />
-        <meta property="og:locale" content="ja_JP" />
-        <meta property="og:type" content="website" />
-        <meta name="twitter:card" content="summary_large_image" />
+        
+        <!-- ogp:必須タグ -->
         <meta property="og:url" content="https://gfool6.github.io/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="" />
+        <meta property="og:title" content="水無し水烟" />
+        <meta property="og:site_name" content="水無し水烟">
+        <!-- ogp:optional -->
+        <meta property="og:description" content="gfool6の個人ページ" />
+        <meta property="og:locale" content="ja_JP" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content="@gfool6">
+        <!-- other -->
+        <meta name="description" content="gfool6の個人ページ" />
         <link rel="canonical" href="https://gfool6.github.io/" />
-
         <link rel="icon" href="/favicon.ico" />
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
         <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
@@ -50,6 +54,7 @@
                     <div class="buttons">
                         <button>picture</button>
                         <button>3d model</button>
+                        <button>software</button>
                         <button>social</button>
                         <button>blog</button>
                     </div>
