--- a/index.html
+++ b/index.html
@@ -37,8 +37,14 @@
         <div class="background">
             <div class="shapes">
                 <div class="shape-quadrangle"></div>
-                <div class="shape-triangle-top-left light"></div>
-                <div class="shape-triangle-bottom-left dark"></div>
+                <div class="shape-triangle-top-left dark"></div>
+                <div class="shape-triangle-bottom-left light"></div>
+            </div>
+            <div class="accent r">
+                <div class="shape-quadrangle"></div>
+            </div>
+            <div class="accent l">
+                <div class="shape-quadrangle"></div>
             </div>
         </div>
         <header>
