--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
             </row>
         </header>
         <content>
+            <div class="cards">
+                <div class="card">
+                    <img src="" />
+                    <div class="text">
+                        <p class="title">Titleです</p>
+                        <p class="detail">簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど</p>
+                    </div>
+                </div>
+            </div>
             <div class="slidemenu">
                 <div class="menucontent">
                     <h1>menu</h1>
