--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja" class="no-js">
-    <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
+    <head
+        prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#"
+    >
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
 
@@ -8,22 +10,32 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-        <link rel="stylesheet" href="./static/style/style.css" type="text/css" />
-        <script src="./static/script/index.js" ></script>
-        
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+        />
+        <link
+            rel="stylesheet"
+            href="./static/style/style.css"
+            type="text/css"
+        />
+        <script src="./static/script/index.js"></script>
+
         <!-- ogp:必須タグ -->
         <meta property="og:url" content="https://gfool6.github.io/" />
         <meta property="og:type" content="website" />
         <meta property="og:image" content="" />
         <meta property="og:title" content="水無し水烟" />
-        <meta property="og:site_name" content="水無し水烟">
+        <meta property="og:site_name" content="水無し水烟" />
         <!-- ogp:optional -->
         <meta property="og:description" content="gfool6の個人ページ" />
         <meta property="og:locale" content="ja_JP" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:site" content="@gfool6">
+        <meta name="twitter:site" content="@gfool6" />
         <!-- other -->
         <meta name="description" content="gfool6の個人ページ" />
         <link rel="canonical" href="https://gfool6.github.io/" />
@@ -59,7 +71,9 @@
                     <img src="" />
                     <div class="text">
                         <p class="title">Titleです</p>
-                        <p class="detail">簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど</p>
+                        <p class="detail">
+                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
+                        </p>
                     </div>
                 </div>
             </div>
