--- a/index.html
+++ b/index.html
@@ -61,14 +61,85 @@
         </div>
         <header>
             <row>
-                <h1 class="weight-bold">水無し水烟</h1>
+                <h1 class="weight-normal">水無し水烟</h1>
                 <button class="hamburger onshow"><span></span></button>
             </row>
         </header>
         <content>
+            <div class="top-text tc-light ts-large weight-normal">
+                <p>ここにこのWebサイトの説明をしたりなんやかんや書いていきますがカッコつけてシンプルに2・3行とかにしそう
+                ここにこのWebサイトの説明をしたりなんやかんや書いていきますがカッコつけてシンプルに2・3行とかにしそう
+                ここにこのWebサイトの説明をしたりなんやかんや書いていきますがカッコつけてシンプルに2・3行とかにしそう</p>
+            </div>
+            <div class="cards-description tc-light ts-large weight-normal">
+                <p>以下のカード類はなんかしらのコンテンツとか多分Newコンテンツのなんかあれでしょ</p>
+            </div>
             <div class="cards">
                 <div class="card">
-                    <img src="" />
+                    <img alt=""/>
+                    <div class="text">
+                        <p class="title">Titleです</p>
+                        <p class="detail">
+                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img alt=""/>
+                    <div class="text">
+                        <p class="title">Titleです</p>
+                        <p class="detail">
+                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img alt=""/>
+                    <div class="text">
+                        <p class="title">Titleです</p>
+                        <p class="detail">
+                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img alt=""/>
+                    <div class="text">
+                        <p class="title">Titleです</p>
+                        <p class="detail">
+                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img alt=""/>
+                    <div class="text">
+                        <p class="title">Titleです</p>
+                        <p class="detail">
+                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img alt=""/>
+                    <div class="text">
+                        <p class="title">Titleです</p>
+                        <p class="detail">
+                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img alt=""/>
+                    <div class="text">
+                        <p class="title">Titleです</p>
+                        <p class="detail">
+                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img alt=""/>
                     <div class="text">
                         <p class="title">Titleです</p>
                         <p class="detail">
