--- a/index.html
+++ b/index.html
@@ -74,80 +74,133 @@
             <div class="cards-description tc-light ts-large weight-normal">
                 <p>以下のカード類はなんかしらのコンテンツとか多分Newコンテンツのなんかあれでしょ</p>
             </div>
-            <div class="cards">
-                <div class="card">
-                    <img alt=""/>
-                    <div class="text">
-                        <p class="title">Titleです</p>
-                        <p class="detail">
-                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
-                        </p>
+            <div class="recents">
+                <div class="cards">
+                    <div class="card">
+                        <img alt=""/>
+                        <div class="text">
+                            <p class="title">Titleです</p>
+                            <p class="detail">
+                                簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
+                            </p>
+                        </div>
+                        <div class="optional">
+                            <ul class="tags">
+                                <li class="tag-blog">blog</li>
+                                <li class="tag-news">news</li>
+                                <li class="tag-shop">shop</li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <img alt=""/>
-                    <div class="text">
-                        <p class="title">Titleです</p>
-                        <p class="detail">
-                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
-                        </p>
+                    <div class="card">
+                        <img alt=""/>
+                        <div class="text">
+                            <p class="title"></p>
+                            <p class="detail">
+                            </p>
+                        </div>
+                        <div class="optional">
+                            <ul class="tags">
+                                <!-- <li class="tag-blog"></li>
+                                <li class="tag-news"></li>
+                                <li class="tag-shop"></li> -->
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <img alt=""/>
-                    <div class="text">
-                        <p class="title">Titleです</p>
-                        <p class="detail">
-                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
-                        </p>
+                    <div class="card">
+                        <img alt=""/>
+                        <div class="text">
+                            <p class="title"></p>
+                            <p class="detail">
+                            </p>
+                        </div>
+                        <div class="optional">
+                            <ul class="tags">
+                                <!-- <li class="tag-blog"></li>
+                                <li class="tag-news"></li>
+                                <li class="tag-shop"></li> -->
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <img alt=""/>
-                    <div class="text">
-                        <p class="title">Titleです</p>
-                        <p class="detail">
-                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
-                        </p>
+                    <div class="card">
+                        <img alt=""/>
+                        <div class="text">
+                            <p class="title"></p>
+                            <p class="detail">
+                            </p>
+                        </div>
+                        <div class="optional">
+                            <ul class="tags">
+                                <!-- <li class="tag-blog"></li>
+                                <li class="tag-news"></li>
+                                <li class="tag-shop"></li> -->
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <img alt=""/>
-                    <div class="text">
-                        <p class="title">Titleです</p>
-                        <p class="detail">
-                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
-                        </p>
+                    <div class="card">
+                        <img alt=""/>
+                        <div class="text">
+                            <p class="title"></p>
+                            <p class="detail">
+                            </p>
+                        </div>
+                        <div class="optional">
+                            <ul class="tags">
+                                <!-- <li class="tag-blog"></li>
+                                <li class="tag-news"></li>
+                                <li class="tag-shop"></li> -->
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <img alt=""/>
-                    <div class="text">
-                        <p class="title">Titleです</p>
-                        <p class="detail">
-                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
-                        </p>
+                    <div class="card">
+                        <img alt=""/>
+                        <div class="text">
+                            <p class="title"></p>
+                            <p class="detail">
+                            </p>
+                        </div>
+                        <div class="optional">
+                            <ul class="tags">
+                                <!-- <li class="tag-blog"></li>
+                                <li class="tag-news"></li>
+                                <li class="tag-shop"></li> -->
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <img alt=""/>
-                    <div class="text">
-                        <p class="title">Titleです</p>
-                        <p class="detail">
-                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
-                        </p>
+                    <div class="card">
+                        <img alt=""/>
+                        <div class="text">
+                            <p class="title"></p>
+                            <p class="detail">
+                                
+                            </p>
+                        </div>
+                        <div class="optional">
+                            <ul class="tags">
+                                <!-- <li class="tag-blog"></li>
+                                <li class="tag-news"></li>
+                                <li class="tag-shop"></li> -->
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <img alt=""/>
-                    <div class="text">
-                        <p class="title">Titleです</p>
-                        <p class="detail">
-                            簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
-                        </p>
+                    <div class="card">
+                        <img alt=""/>
+                        <div class="text">
+                            <p class="title"></p>
+                            <p class="detail">
+                            </p>
+                        </div>
+                        <div class="optional">
+                            <ul class="tags">
+                                <!-- <li class="tag-blog"></li>
+                                <li class="tag-news"></li>
+                                <li class="tag-shop"></li> -->
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
+            
             <div class="slidemenu">
                 <div class="menucontent">
                     <h1>menu</h1>
