directory page other

--- a/index.html
+++ b/index.html
@@ -205,11 +205,11 @@
                 <div class="menucontent">
                     <h1>menu</h1>
                     <div class="buttons">
-                        <button>picture</button>
-                        <button>3d model</button>
-                        <button>software</button>
-                        <button>social</button>
-                        <button>blog</button>
+                        <button id="transition-picture">picture</button>
+                        <button id="transition-3d">3d model</button>
+                        <button id="transition-software">software</button>
+                        <button id="transition-social">social</button>
+                        <button id="transition-blog">blog</button>
                     </div>
                 </div>
             </div>
