--- a/index.html
+++ b/index.html
@@ -66,140 +66,7 @@
             </row>
         </header>
         <content>
-            <div class="top-text tc-light ts-large weight-normal">
-                <p>ここにこのWebサイトの説明をしたりなんやかんや書いていきますがカッコつけてシンプルに2・3行とかにしそう
-                ここにこのWebサイトの説明をしたりなんやかんや書いていきますがカッコつけてシンプルに2・3行とかにしそう
-                ここにこのWebサイトの説明をしたりなんやかんや書いていきますがカッコつけてシンプルに2・3行とかにしそう</p>
-            </div>
-            <div class="cards-description tc-light ts-large weight-normal">
-                <p>以下のカード類はなんかしらのコンテンツとか多分Newコンテンツのなんかあれでしょ</p>
-            </div>
-            <div class="recents">
-                <div class="cards">
-                    <div class="card">
-                        <img alt=""/>
-                        <div class="text">
-                            <p class="title">Titleです</p>
-                            <p class="detail">
-                                簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
-                            </p>
-                        </div>
-                        <div class="optional">
-                            <ul class="tags">
-                                <li class="tag-blog">blog</li>
-                                <li class="tag-news">news</li>
-                                <li class="tag-shop">shop</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img alt=""/>
-                        <div class="text">
-                            <p class="title"></p>
-                            <p class="detail">
-                            </p>
-                        </div>
-                        <div class="optional">
-                            <ul class="tags">
-                                <!-- <li class="tag-blog"></li>
-                                <li class="tag-news"></li>
-                                <li class="tag-shop"></li> -->
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img alt=""/>
-                        <div class="text">
-                            <p class="title"></p>
-                            <p class="detail">
-                            </p>
-                        </div>
-                        <div class="optional">
-                            <ul class="tags">
-                                <!-- <li class="tag-blog"></li>
-                                <li class="tag-news"></li>
-                                <li class="tag-shop"></li> -->
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img alt=""/>
-                        <div class="text">
-                            <p class="title"></p>
-                            <p class="detail">
-                            </p>
-                        </div>
-                        <div class="optional">
-                            <ul class="tags">
-                                <!-- <li class="tag-blog"></li>
-                                <li class="tag-news"></li>
-                                <li class="tag-shop"></li> -->
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img alt=""/>
-                        <div class="text">
-                            <p class="title"></p>
-                            <p class="detail">
-                            </p>
-                        </div>
-                        <div class="optional">
-                            <ul class="tags">
-                                <!-- <li class="tag-blog"></li>
-                                <li class="tag-news"></li>
-                                <li class="tag-shop"></li> -->
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img alt=""/>
-                        <div class="text">
-                            <p class="title"></p>
-                            <p class="detail">
-                            </p>
-                        </div>
-                        <div class="optional">
-                            <ul class="tags">
-                                <!-- <li class="tag-blog"></li>
-                                <li class="tag-news"></li>
-                                <li class="tag-shop"></li> -->
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img alt=""/>
-                        <div class="text">
-                            <p class="title"></p>
-                            <p class="detail">
-                                
-                            </p>
-                        </div>
-                        <div class="optional">
-                            <ul class="tags">
-                                <!-- <li class="tag-blog"></li>
-                                <li class="tag-news"></li>
-                                <li class="tag-shop"></li> -->
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img alt=""/>
-                        <div class="text">
-                            <p class="title"></p>
-                            <p class="detail">
-                            </p>
-                        </div>
-                        <div class="optional">
-                            <ul class="tags">
-                                <!-- <li class="tag-blog"></li>
-                                <li class="tag-news"></li>
-                                <li class="tag-shop"></li> -->
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div id="content-area"></div>
             
             <div class="slidemenu">
                 <div class="menucontent">
