--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap"
-            rel="stylesheet"
-        />
-        <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
         />
@@ -61,7 +57,7 @@
         </div>
         <header>
             <row>
-                <h1 class="weight-normal">水無し水烟</h1>
+                <h1 class="weight-thin tc-primary">水無し水烟</h1>
                 <button class="hamburger onshow"><span></span></button>
             </row>
         </header>
