--- a/pages/indexContent.html
+++ b/pages/indexContent.html
@@ -1,7 +1,7 @@
 <div class="top-text tc-light ts-large weight-normal">
-    <p>ここにこのWebサイトの説明をしたりなんやかんや書いていきますがカッコつけてシンプルに2・3行とかにしそう
-    ここにこのWebサイトの説明をしたりなんやかんや書いていきますがカッコつけてシンプルに2・3行とかにしそう
-    ここにこのWebサイトの説明をしたりなんやかんや書いていきますがカッコつけてシンプルに2・3行とかにしそう</p>
+    <p>
+        あのイーハトーヴォのすきとおった風、夏でも底に冷たさをもつ青いそら、うつくしい森で飾られたモリーオ市、郊外のぎらぎらひかる草の波。Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
 </div>
 <div class="cards-description tc-light ts-large weight-normal">
     <p>以下のカード類はなんかしらのコンテンツとか多分Newコンテンツのなんかあれでしょ</p>
@@ -9,7 +9,7 @@
 <div class="recents">
     <div class="cards">
         <div class="card">
-            <img alt=""/>
+            <img alt="" loading="lazy"/>
             <div class="text">
                 <p class="title">Titleです</p>
                 <p class="detail">
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="card">
-            <img alt=""/>
+            <img alt="" loading="lazy"/>
             <div class="text">
                 <p class="title"></p>
                 <p class="detail">
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="card">
-            <img alt=""/>
+            <img alt="" loading="lazy"/>
             <div class="text">
                 <p class="title"></p>
                 <p class="detail">
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="card">
-            <img alt=""/>
+            <img alt="" loading="lazy"/>
             <div class="text">
                 <p class="title"></p>
                 <p class="detail">
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="card">
-            <img alt=""/>
+            <img alt="" loading="lazy"/>
             <div class="text">
                 <p class="title"></p>
                 <p class="detail">
@@ -85,7 +85,7 @@
             </div>
         </div>
         <div class="card">
-            <img alt=""/>
+            <img alt="" loading="lazy"/>
             <div class="text">
                 <p class="title"></p>
                 <p class="detail">
@@ -100,11 +100,10 @@
             </div>
         </div>
         <div class="card">
-            <img alt=""/>
+            <img alt="" loading="lazy"/>
             <div class="text">
                 <p class="title"></p>
                 <p class="detail">
-                    
                 </p>
             </div>
             <div class="optional">
@@ -116,7 +115,7 @@
             </div>
         </div>
         <div class="card">
-            <img alt=""/>
+            <img alt="" loading="lazy"/>
             <div class="text">
                 <p class="title"></p>
                 <p class="detail">
