--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             href="./static/style/style.css"
             type="text/css"
         />
+        <script src="https://cdn.jsdelivr.net/npm/markdown-wasm@1.2.0/dist/markdown.min.js"></script>
         <script src="./static/script/index.js"></script>
 
         <!-- ogp:必須タグ -->
