--- a/pages/blog.html
+++ b/pages/blog.html
@@ -20,6 +20,19 @@
                 <h1>Archive</h1>
                 <ul>
                     <li><a href="">2022/10</a></li>
+                    <li><a href="">2022/10</a></li>
+                    <li><a href="">2022/10</a></li>
+                    <li><a href="">2022/10</a></li>
+                    <li><a href="">2022/10</a></li>
+                    <li><a href="">2022/10</a></li>
+                    <li><a href="">2022/10</a></li>
+                    <li><a href="">2022/10</a></li>
+                    <li><a href="">2022/10</a></li>
+                    <li><a href="">2022/10</a></li>
+                    <li><a href="">2022/10</a></li>
+                    <li><a href="">2022/10</a></li>
+                    <li><a href="">2022/10</a></li>
+                    <li><a href="">2022/10</a></li>
                 </ul>
             </div>
             <div class="link">
