--- a/pages/indexContent.html
+++ b/pages/indexContent.html
@@ -9,18 +9,13 @@
 <div class="recents">
     <div class="cards">
         <div class="card">
-            <img alt="" loading="lazy"/>
+            <img src="" alt="" loading="lazy"/>
             <div class="text">
-                <p class="title">Titleです</p>
-                <p class="detail">
-                    簡単な詳細情報などなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなどなど
-                </p>
+                <p class="title"></p>
+                <p class="detail"></p>
             </div>
             <div class="optional">
                 <ul class="tags">
-                    <li class="tag-blog">blog</li>
-                    <li class="tag-news">news</li>
-                    <li class="tag-shop">shop</li>
                 </ul>
             </div>
         </div>
