--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
         <link
-            rel="preload stylesheet"
+            rel="stylesheet"
             href="./static/style/style.css"
             type="text/css"
         />
