--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             href="./static/style/style.css"
             type="text/css"
         />
-        <script src="https://cdn.jsdelivr.net/npm/markdown-wasm@1.2.0/dist/markdown.min.js" async></script>
-        <script src="./static/script/index.js" async></script>
+        <script src="https://cdn.jsdelivr.net/npm/markdown-wasm@1.2.0/dist/markdown.min.js"></script>
+        <script src="./static/script/index.js"></script>
 
         <!-- ogp:必須タグ -->
         <meta property="og:url" content="https://gfool6.github.io/" />
