--- a/pages/indexContent.html
+++ b/pages/indexContent.html
@@ -1,30 +1,51 @@
 <div class="top-text tc-light ts-large weight-normal">
     <p>
-        あのイーハトーヴォのすきとおった風、夏でも底に冷たさをもつ青いそら、うつくしい森で飾られたモリーオ市、郊外のぎらぎらひかる草の波。Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        あのイーハトーヴォのすきとおった風、夏でも底に冷たさをもつ青いそら、うつくしい森で飾られたモリーオ市、郊外のぎらぎらひかる草の波。Lorem
+        ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+        id est laborum.
     </p>
 </div>
 <div class="cards-description tc-light ts-large weight-normal">
-    <p>以下のカード類はなんかしらのコンテンツとか多分Newコンテンツのなんかあれでしょ</p>
+    <p>
+        以下のカード類はなんかしらのコンテンツとか多分Newコンテンツのなんかあれでしょ
+    </p>
 </div>
 <div class="recents">
     <div class="cards">
         <div class="card">
-            <img src="" alt="" loading="lazy"/>
+            <img src="" alt="" loading="lazy" />
+            <div class="text">
+                <p class="title"></p>
+                <p class="detail"></p>
+            </div>
+            <div class="optional">
+                <ul class="tags"></ul>
+            </div>
+        </div>
+        <div class="card">
+            <img alt="" loading="lazy" />
             <div class="text">
                 <p class="title"></p>
                 <p class="detail"></p>
             </div>
             <div class="optional">
                 <ul class="tags">
+                    <!-- <li class="tag-blog"></li>
+                    <li class="tag-news"></li>
+                    <li class="tag-shop"></li> -->
                 </ul>
             </div>
         </div>
         <div class="card">
-            <img alt="" loading="lazy"/>
+            <img alt="" loading="lazy" />
             <div class="text">
                 <p class="title"></p>
-                <p class="detail">
-                </p>
+                <p class="detail"></p>
             </div>
             <div class="optional">
                 <ul class="tags">
@@ -35,11 +56,10 @@
             </div>
         </div>
         <div class="card">
-            <img alt="" loading="lazy"/>
+            <img alt="" loading="lazy" />
             <div class="text">
                 <p class="title"></p>
-                <p class="detail">
-                </p>
+                <p class="detail"></p>
             </div>
             <div class="optional">
                 <ul class="tags">
@@ -50,11 +70,10 @@
             </div>
         </div>
         <div class="card">
-            <img alt="" loading="lazy"/>
+            <img alt="" loading="lazy" />
             <div class="text">
                 <p class="title"></p>
-                <p class="detail">
-                </p>
+                <p class="detail"></p>
             </div>
             <div class="optional">
                 <ul class="tags">
@@ -65,11 +84,10 @@
             </div>
         </div>
         <div class="card">
-            <img alt="" loading="lazy"/>
+            <img alt="" loading="lazy" />
             <div class="text">
                 <p class="title"></p>
-                <p class="detail">
-                </p>
+                <p class="detail"></p>
             </div>
             <div class="optional">
                 <ul class="tags">
@@ -80,11 +98,10 @@
             </div>
         </div>
         <div class="card">
-            <img alt="" loading="lazy"/>
+            <img alt="" loading="lazy" />
             <div class="text">
                 <p class="title"></p>
-                <p class="detail">
-                </p>
+                <p class="detail"></p>
             </div>
             <div class="optional">
                 <ul class="tags">
@@ -95,26 +112,10 @@
             </div>
         </div>
         <div class="card">
-            <img alt="" loading="lazy"/>
+            <img alt="" loading="lazy" />
             <div class="text">
                 <p class="title"></p>
-                <p class="detail">
-                </p>
-            </div>
-            <div class="optional">
-                <ul class="tags">
-                    <!-- <li class="tag-blog"></li>
-                    <li class="tag-news"></li>
-                    <li class="tag-shop"></li> -->
-                </ul>
-            </div>
-        </div>
-        <div class="card">
-            <img alt="" loading="lazy"/>
-            <div class="text">
-                <p class="title"></p>
-                <p class="detail">
-                </p>
+                <p class="detail"></p>
             </div>
             <div class="optional">
                 <ul class="tags">
